Update API-docs
